# cmake-scripts

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  compiler-options.cmake
cmake/: cmake-scriptsConfig.cmake
test/: CMakeLists.txt
